# Unfoldly

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  api_server.py  backend_core.py  pyproject.toml  requirements-bundle.txt  requirements.txt  runtime-core.txt
apps/desktop/: .gitignore  App.tsx  README.md  UPDATE_RELEASE.md  backend.ts  constants.ts  i18n.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: mod.rs
config/: prompts.py  settings.py  supported_models.json
core/: intent_analyzer.py  langgraph_agent.py  monitor.py  reranker.py
core/agent/: __init__.py  dispatch.py  live_stream.py  response_formatter.py  tool_agent.py
core/domain/: __init__.py  action_models.py  (+1 more)
database/: metadata_index.py  personal_info_db.py
docs/: BUILD_MACOS.md  FEATURES.md  MACOS_ARCHITECTURE.md  MODELS.md  RELEASE.md  THIRD_PARTY_DEPENDENCIES.md  THIRD_PARTY_NOTICES.md
scripts/: build-release.sh  sign-release.sh  start-dev.sh  uninstall-mac.sh
services/: __init__.py  download_utils.py  inproc_openai_client.py  llm_service.py  local_llm.py  model_manager.py  preference_manager.py
tools/: __init__.py  document_tools.py  file_management_tools.py  fs_utils.py  intent_registry.py  intent_specs.py  registry.py
utils/: file_explorer.py  logger.py  pdf_utils.py
(+98 files in other folders)
