[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unfoldly-backend"
version = "1.0.1"
description = "Unfoldly Backend"
license = { text = "Apache-2.0" }
dependencies = []

[tool.setuptools]
py-modules = ["backend_core", "api_server"]

[tool.setuptools.packages.find]
include = ["config", "config.*", "core", "core.*", "database", "database.*", "services", "services.*", "tools", "tools.*", "utils", "utils.*"]

[tool.setuptools.package-data]
"config" = ["supported_models.json"]
