[package]
name = "unfoldly"
version = "1.0.0"
description = "Unfoldly - Local AI File Agent"
authors = ["Unfoldly"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pythonize = "0.23"
libc = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
